--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Project
+vsts-runner-config.json
+
+# Editors
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -86,6 +92,7 @@ celerybeat-schedule
 .venv
 venv/
 ENV/
+env*/
 
 # Spyder project settings
 .spyderproject
